# FAONet

./: 404.html  FAONet_example.ipynb  FAONet_example_fixed.ipynb  README.md  README1.md  To-do_list.md  index.html  objects.inv  plots.py  pyproject.toml  sitemap.xml
examples/: FAONet_example.ipynb
faonet/: To-do_list.md  export.py  filtering.py  fitting.py  io.py  metrics.py  network.py  plots.py
reference/: index.html
search/: search_index.json
tests/: test_faonet.py  test_io.py
