[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faonet"
version = "0.1.0"
description = "A package to analyze bipartite trade networks from FAOSTAT data"
authors = [{name = "Javier Galeano", email = "javier.galeano@upm.es"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pandas",
    "networkx",
    "matplotlib"
]
