[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faonet"
version = "0.1.0"
description = "Analyze bipartite trade networks using FAOSTAT data"
authors = [
    { name = "Javier Galeano", email = "galeanojav@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pandas",
    "networkx",
    "matplotlib",
    "seaborn"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.urls]
Homepage = "https://github.com/galeanojav/FAONet"
